Integrate the twitter feed

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,6 +21,7 @@
         .row
           .span4
             %h3 Twitter
+            = @twitter_feed
           .span4
             %h3 Facebook
           .span4
