--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -131,6 +131,30 @@ body{
   background-color: rgba(0, 0, 0, 0.1);
   box-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1), 0px 1px 0px rgba(255, 255, 255, 0.6) inset;
   -moz-transition: all 0.1s ease-in 0s;
+  .feeds{
+    position:relative;
+    background: white;
+    color:$gray;
+    font-weight:bold;
+    .twitter-bird{
+      position:absolute;
+      bottom:5px;
+      right:5px;
+    }
+    span{
+      color:$blue;
+    }
+  }
+  .feeds :before{
+    content: ' ';
+	position: absolute;
+	width: 0;
+	height: 0;
+	left: -20px;
+	top: 15px;
+	border: 10px solid;
+	border-color: #fff #fff transparent transparent;
+  }
 }
 
 /**************************************
