Finish working on layout

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,11 +1,9 @@
 #footer
   .container
     .row
-      .span4
-        %h3 Contact Me
-      .span4
-        %h3 Facebook
-      .span4
+      .span6
+        %h3 Connect With Me
+      .span6
         %h3 Twitter
         - @twitter_feed.each do |status|
           .well.feeds
