Reorganize header layout

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,5 +1,5 @@
 .hero-unit.well
-  %p Hello, my name is <b>Bryce</b>. I am freelance junior web developer living in New York and this is my <b>portfolio</b>.
+  %p Hello, my name is <b>Bryce Batson</b>. I am freelance junior web developer living in New York and this is my <b>portfolio</b>.
 .container
   .row
     .divider
