--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -77,6 +77,7 @@ body{
     top:-.5em;
     padding:0px;
     font-size:40px;
+    color:$green;
   }
   .bottom{
     top:2em;
@@ -93,7 +94,8 @@ body{
   p{
     font-style:italic;
     b{
-      color:$gray;
+      color:$green;
+      font-size:1.2em;
     }
   }
 }
@@ -116,7 +118,9 @@ body{
 .thumbnail{
   text-align:center;
 }
-
+a.thumbnail:hover {
+  border-color:$green;
+}
 /**************************************
 * Footer Styling
 **************************************/
