Change to Ruby 1.8.3 compatible definitions

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -11,31 +11,31 @@
 
     %li.span4
       .thumbnail
-        = link_to image_tag("up.jpg"),"#", class: "thumbnail"
+        = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
         %p UP
 
     %li.span4
       .thumbnail
-        = link_to image_tag("toystory.jpg"), "#", class: "thumbnail"
+        = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
         %p Toy Story
 
     %li.span4
       .thumbnail
-        = link_to image_tag("walle.jpg"), "#", class: "thumbnail"
+        = link_to image_tag("walle.jpg"), "#", :class  => "thumbnail"
         %p Walle
   %ul.thumbnails
 
     %li.span4
       .thumbnail
-        = link_to image_tag("up.jpg"),"#", class: "thumbnail"
+        = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
         %p UP
     %li.span4
       .thumbnail
-        = link_to image_tag("toystory.jpg"), "#", class: "thumbnail"
+        = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
         %p Toy Story
     %li.span4
       .thumbnail
-        = link_to image_tag("walle.jpg"), "#", class: "thumbnail"
+        = link_to image_tag("walle.jpg"), "#", :class => "thumbnail"
         %p Walle
   .divider
     %span &diams; &diams;
