--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 .row
   .span6.offset6
     %ul#social-links
-      %li= image_tag "twitter-off.png", mouseover: "twitter-on.png"
-      %li= image_tag "facebook-off.png", mouseover: "facebook-on.png"
-      %li= image_tag "rss-off.png", mouseover: "rss-on.png"
+      %li= link_to image_tag("twitter-off.png", mouseover: "twitter-on.png"),"#"
+      %li= link_to image_tag("facebook-off.png", mouseover: "facebook-on.png"),"#"
+      %li= link_to image_tag("rss-off.png", mouseover: "rss-on.png"),"#"
