--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,11 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    #contact
+      =form_for @contact do |f|
+        #{f.label :name}:
+        
+        =f.textfield :name
     .container
       = render :partial => 'layouts/header'
     = yield
