Add message model

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,10 +9,10 @@
     = csrf_meta_tags
   %body
     #contact
-      =form_for @contact do |f|
-        #{f.label :name}:
-        
+      =form_for @message do |f|
+        "#{f.label :name}:"
         =f.textfield :name
+        %br/
     .container
       = render :partial => 'layouts/header'
     = yield
