--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,4 +28,4 @@
           I am a junior developer with two years of PHP and MySQL development experience and almost 5 years of HTML experience.
           %span "
 #sub-footer
-  %p &copy;2012 Bryce Batson, All Rights Reserved
+  %p &copy;2012 <a href="#{root_path}" alt="Bryce Batson">Bryce Batson</a>, All Rights Reserved
