--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,5 +1,7 @@
 .hero-unit.well
-  %p Hello, my name is <b>Bryce Batson</b>. I am freelance junior web developer living in New York and this is my <b>portfolio</b>.
+  .logo
+    =image_tag("photo-badge.png")
+  %p Hello, my name is <b>Bryce Batson</b>. I am freelance junior web developer living in New York and this is... <b>my portfolio</b>.
 .container
   .row
     .divider
