--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -167,6 +167,7 @@ a.thumbnail:hover {
     border-bottom:2px dashed $grayLight;
     padding-top:8px;
     padding-bottom:8px;
+    margin-right:20px;
   }
   .feed:last-child{
     border-bottom:none;
