--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,6 @@
     = csrf_meta_tags
   %body
     .container
+      =render :partial => 'layouts/header'
     = yield
     = render :partial => 'layouts/footer'
