--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -9,38 +9,39 @@
     %h2.span12.center
       %i Recent Projects
 
-  %ul.thumbnails
+  .row
+    %ul.thumbnails
 
-    %li.span4
-      .thumbnail
-        = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
-        %p UP
+      %li.span4
+        .thumbnail
+          = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
+          %p UP
 
-    %li.span4
-      .thumbnail
-        = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
-        %p Toy Story
+      %li.span4
+        .thumbnail
+          = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
+          %p Toy Story
 
-    %li.span4
-      .thumbnail
-        = link_to image_tag("walle.jpg"), "#", :class  => "thumbnail"
-        %p Walle
-  %ul.thumbnails
+      %li.span4
+        .thumbnail
+          = link_to image_tag("walle.jpg"), "#", :class  => "thumbnail"
+          %p Walle
+    %ul.thumbnails
 
-    %li.span4
-      .thumbnail
-        = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
-        %p UP
-    %li.span4
-      .thumbnail
-        = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
-        %p Toy Story
-    %li.span4
-      .thumbnail
-        = link_to image_tag("walle.jpg"), "#", :class => "thumbnail"
-        %p Walle
-  .divider
-    %span &diams; &diams;
+      %li.span4
+        .thumbnail
+          = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
+          %p UP
+      %li.span4
+        .thumbnail
+          = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
+          %p Toy Story
+      %li.span4
+        .thumbnail
+          = link_to image_tag("walle.jpg"), "#", :class => "thumbnail"
+          %p Walle
+    .divider
+      %span &diams; &diams;
   .row
     %h2.span12.center
       %i Testmonials
