Change portfolio images

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -14,32 +14,35 @@
 
       %li.span4
         .thumbnail
-          = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
-          %p UP
+          = link_to image_tag("danettes-photography.png"),"#", :class => "thumbnail"
+          %p Danette's Photography
 
       %li.span4
         .thumbnail
-          = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
-          %p Toy Story
+          = link_to image_tag("my-portfolio.png"), "#", :class => "thumbnail"
+          %p My Portfolio
 
       %li.span4
         .thumbnail
-          = link_to image_tag("walle.jpg"), "#", :class  => "thumbnail"
-          %p Walle
+          = link_to image_tag("the-wallers.png"), "#", :class  => "thumbnail"
+          %p The Wallers Family Website
     %ul.thumbnails
 
       %li.span4
         .thumbnail
-          = link_to image_tag("up.jpg"),"#", :class => "thumbnail"
-          %p UP
+          = link_to image_tag("danettes-photography.png"),"#", :class => "thumbnail"
+          %p Danette's Photography
+
       %li.span4
         .thumbnail
-          = link_to image_tag("toystory.jpg"), "#", :class => "thumbnail"
-          %p Toy Story
+          = link_to image_tag("my-portfolio.png"), "#", :class => "thumbnail"
+          %p My Portfolio
+
       %li.span4
         .thumbnail
-          = link_to image_tag("walle.jpg"), "#", :class => "thumbnail"
-          %p Walle
+          = link_to image_tag("the-wallers.png"), "#", :class  => "thumbnail"
+          %p The Wallers Family Website
+          
     .divider
       %span &diams; &diams;
   .row
