--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -6,15 +6,24 @@
         %h4 Connect With Me
         %b Bryce Batson
         %br/
+        =image_tag 'icon-home.png', :class => 'pull-left'
         %p
           376 Margaret St Apt D-21
         %p
           Plattsburgh, NY 12901
         %br/
+        =image_tag 'icon-phone.png', :class => 'pull-left'
         %p
-          Phone: 802.473.0249
+          Phone:
         %p
-          Email: Batson456@gmail.com
+          802.473.0249
+        %br/
+        =image_tag 'icon-email.png', :class => 'pull-left'
+        %p
+          Email:
+        %p
+          Batson456@gmail.com
+        %br/
         %p
           =link_to image_tag('facebook-off.png', :mouseover => 'facebook-on.png'), '#'
           =link_to image_tag('twitter-off.png', :mouseover => 'twitter-on.png'),'#'
