--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -43,11 +43,12 @@
           = link_to image_tag("the-wallers.png"), "#", :class  => "thumbnail"
           %p The Wallers Family Website
           
-    .divider
-      %span &diams; &diams;
-  .row
-    %h2.span12.center
-      %i Testmonials
+    .row
+      .divider
+        %span &diams; &diams;
+    .row
+      %h2.span12.center
+        %i Testmonials
 
   :javascript
     $(document).ready(function(){
@@ -58,6 +59,9 @@
     });
 
   #testimonials.testimonial-wrapper
-    %div.well Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    %div.well Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    %div.well 
+      %p <b>"</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>"</b>
+
+    %div.well
+      %p <b>"</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>"</b>
 
