--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,8 +1,8 @@
+%a.toggle Contact Me <b>+</b>
 .contact_container.well
-  .contact
-    %p
-      =link_to image_tag('facebook-off.png', :mouseover => 'facebook-on.png'), '#'
-      =link_to image_tag('twitter-off.png', :mouseover => 'twitter-on.png'),'#'
-      =link_to image_tag('rss-off.png',:mouseover => 'rss-on.png'),'#'
-%a.toggle
-  Contact Me <b>+</b>
+  %p
+    =link_to image_tag('facebook-off.png', :mouseover => 'facebook-on.png'), '#'
+    =link_to image_tag('twitter-off.png', :mouseover => 'twitter-on.png'),'#'
+    =link_to image_tag('rss-off.png',:mouseover => 'rss-on.png'),'#'
+  %a.toggle
+    Close <b>-</b>
