--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -19,30 +19,15 @@
 
       %li.span4
         .thumbnail
-          = link_to image_tag("my-portfolio.png"), "#", :class => "thumbnail"
+          = link_to image_tag("my-portfolio.png"), "http://www.bbatson.com", :class => "thumbnail"
           %p My Portfolio
 
       %li.span4
         .thumbnail
-          = link_to image_tag("the-wallers.png"), "#", :class  => "thumbnail"
-          %p The Wallers Family Website
+          = link_to image_tag("the-wallers.png"), "http://afternoon-sunrise-8983.herokuapp.com/", :class  => "thumbnail"
+          %p The Wallers Family Website (WIP)
     %ul.thumbnails
 
-      %li.span4
-        .thumbnail
-          = link_to image_tag("danettes-photography.png"),"#", :class => "thumbnail"
-          %p Danette's Photography
-
-      %li.span4
-        .thumbnail
-          = link_to image_tag("my-portfolio.png"), "#", :class => "thumbnail"
-          %p My Portfolio
-
-      %li.span4
-        .thumbnail
-          = link_to image_tag("the-wallers.png"), "#", :class  => "thumbnail"
-          %p The Wallers Family Website
-          
     .row
       .divider
         %span &diams; &diams;
@@ -59,7 +44,7 @@
     });
 
   #testimonials.testimonial-wrapper
-    %div.well 
+    %div.well
       %p <b>"</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>"</b>
 
     %div.well
