--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
-%a.toggle Contact Me <b>+</b>
+=link_to_function "Contact Me +", "toggle_div('div.contact_container')", :class =>'toggle'
 .contact_container.well
   =link_to image_tag('facebook-off.png', :mouseover => 'facebook-on.png'), '#'
   =link_to image_tag('twitter-off.png', :mouseover => 'twitter-on.png'),'#'
   =link_to image_tag('rss-off.png',:mouseover => 'rss-on.png'),'#'
-  %a.toggle Close <b>-</b>
+  =link_to_function "Close -", "toggle_div('div.contact_container')", :class => 'toggle'
