--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,7 +48,7 @@ body{
     border-right:none;
   }
 }
-.contact_container{
+.contact_form{
   float:left;
   padding-top:30px;
   z-index:9999;
@@ -56,7 +56,6 @@ body{
   left:0px;
   width:auto;
   height:auto;
-  display:none;
   textarea{
     height:70px;
   }
