Edit testimonials to be more personal

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -147,6 +147,10 @@ body{
   color:$grayLight;
   letter-spacing:2px;
   font-style:italic;
+  .author{
+    font-size:10px;
+    float:right;
+  }
 }
 .thumbnail{
   text-align:center;
