--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -45,8 +45,10 @@
 
   #testimonials.testimonial-wrapper
     %div.well
-      %p <b>"</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>"</b>
+      %p <b>"</b>Bryce worked with me to get exactly what I was looking for. He was very professional and I couldn't be happier with my site!<b>"</b>
+      .author <i>- Danette Duprey</i>
 
     %div.well
-      %p <b>"</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<b>"</b>
+      %p <b>"</b>This space is reserved for the multitude of rave reviews I am going to start compiling<b>"</b>
+      .author <i>- Bryce Batson</i>
 
