--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -48,22 +48,22 @@ body{
     border-right:none;
   }
 }
-.contact_form{
+.contact_container{
   float:left;
-  position:fixed;
   padding-top:30px;
-
   z-index:9999;
   top:0px;
   left:0px;
   width:auto;
   height:auto;
+  display:none;
   textarea{
     height:70px;
   }
 }
 .toggle{
   float:left;
+  display:none;
   border:1px solid white;
   top:0px;
   left:0px;
