Add client_validation gem for ajax validation

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -22,7 +22,7 @@
         %p
           Email:
         %p
-          Batson456@gmail.com
+          =mail_to "bryce@bbatson.com"
         %br/
         %p
           =link_to image_tag('facebook-off.png', :mouseover => 'facebook-on.png'), '#'
