--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,6 +28,42 @@ body{
 /**************************************
 * Header Styling
 **************************************/
+#contact_form_container{
+  position:absolute;
+  left:0px;
+  top:0px;
+  z-index:100;
+}
+#contact_form{
+  background:$grayLighter;
+  padding: 19px;
+  padding-top:25px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  display:none;
+  textarea{
+    height:80px;
+  }
+}
+#contact_link{
+  width:100px;
+  position:absolute;
+  text-align:center;
+  top:0px;
+  left:0px;
+  background:$blue;
+  color:white;
+  display:block;
+  cursor:pointer;
+}
 #header{
   list-style:none;
   text-shadow: 0px 1px 1px #fff;
@@ -47,36 +83,6 @@ body{
   li:last-child{
     border-right:none;
   }
-}
-.contact_form{
-  float:left;
-  padding-top:30px;
-  z-index:9999;
-  top:0px;
-  left:0px;
-  width:auto;
-  height:auto;
-  textarea{
-    height:70px;
-  }
-}
-.toggle{
-  float:left;
-  display:none;
-  border:1px solid white;
-  top:0px;
-  left:0px;
-  z-index:9999;
-  width:100px;
-  cursor:pointer;
-  text-align:center;
-  background:$blue;
-  color:white;
-}
-.toggle:hover{
-  color:black;
-  opacity:.5;
-  text-decoration:none;
 }
 /**************************************
 * Shadow and Spacer Styling
